- restructured the test code to be in the proper folder